# SBrowser2

./: .gitignore  CMakeLists.txt  README.md  StyleGuide.md  main.cpp
src/ext/: CMakeLists.txt  allocator.hpp  allocator.ixx  any.hpp  any.ixx  array.hpp  array.ixx  array_buffer.hpp  array_buffer.ixx  assert.hpp  assertion.hpp  assertion.ixx  bit.hpp  bit.ixx  boolean.hpp  boolean.ixx  casting.hpp  casting.ixx  concepts.hpp  concepts.ixx  core.ixx  custom_operator.hpp  date.hpp  date.ixx  encoding.hpp  enums.hpp  enums.ixx  expected.hpp  expected.ixx  filesystem.hpp  filesystem.ixx  forward.hpp  functional.hpp  functional.ixx  hash.hpp  hashing.hpp  hashing.ixx  initializer_list.hpp  initializer_list.ixx  js.ixx  (+67 more)
src/ext/detail/: guard_property.hpp  hash.hpp  infinity.hpp  meta_property.hpp
src/ext/impl/: allocator.ixx  any.ixx  array.ixx  array_buffer.ixx  assertion.ixx  async_like.ixx  bit.ixx  boolean.ixx  casting.ixx  concepts.ixx  date.ixx  enums.ixx  expected.ixx  filesystem.ixx  functional.ixx  hashing.ixx  initializer_list.ixx  json.ixx  map.ixx  map_like.ixx  memory.ixx  number.ixx  optional.ixx  pair.ixx  promise.ixx  queue.ixx  random.ixx  ranges.ixx  regex.ixx  set.ixx  singleton.ixx  span.ixx  stack.ixx  string.ixx  symbol.ixx  threading.ixx  time.ixx  tuple.ixx  type_traits.ixx  uuid.ixx  (+4 more)
src/ext/macros/: annotations.hpp  annotations.ixx  constructors.hpp  constructors.ixx  custom_operator.hpp  extended_attributes.hpp  extended_attributes.ixx  language_shorthand.hpp  language_shorthand.ixx  namespaces.hpp  namespaces.ixx  os.hpp  other.hpp  pimpl.hpp  property.hpp
src/gui/javascript_interop/: registry.hpp
src/javascript/: CMakeLists.txt  _typedefs.hpp
src/javascript/ecma/7_absract_operations/: 7_2_testing_and_comparison_operations.hpp
src/javascript/environment/: environment_initialization.hpp  environment_module.hpp  environment_settings.hpp  feature_support.hpp  global_slots.cpp  global_slots.hpp  init.ixx  isolate_data_slots.hpp  module_type.ixx  realms.cpp  realms.hpp  realms.ixx  realms_2.hpp  reflection.hpp  settings.ixx  slots.cpp  slots.ixx
src/javascript/environment/manual_primitive_conversions/: convert_any.hpp  convert_boolean.hpp  convert_map.hpp  convert_map_like.hpp  convert_number.hpp  convert_optional.hpp  convert_property.hpp  convert_set.hpp  convert_shared_pointer.hpp  convert_string.hpp  convert_vector.hpp  convert_vector_like.hpp
src/javascript/initialization_scripts/: module_to_global.js
src/javascript/interop/: annotations.hpp  expose_macros.hpp  expose_v8_conversions_to_context.hpp  primitive_conversions.hpp  primitive_conversions.ixx
src/javascript/interop/automatic_object_conversions/: cpp_object_to_v8.hpp  expose_macros.hpp  expose_v8_conversions_to_context.hpp
src/javascript/interop/manual_primitive_conversions/: convert_any.hpp  convert_boolean.hpp  convert_datetime.hpp  convert_enum.hpp  convert_function.hpp  convert_map.hpp  convert_map_like.hpp  convert_nullptr_t.hpp  convert_number.hpp  convert_number_float.hpp  convert_number_integer.hpp  convert_optional.hpp  convert_property.hpp  convert_set.hpp  convert_string.hpp  convert_vector.hpp  convert_vector_like.hpp
src/javascript/macros/: errors.hpp  expose.hpp  features.hpp  reflection.hpp
src/javascript/web_apis/: CMakeLists.txt  base_exception.cpp  base_exception.hpp  base_exception.ixx  base_exception_private.hpp  base_exception_private.ixx  dom_object.cpp  dom_object.hpp  dom_object.ixx  dom_object_private.hpp  dom_object_private.ixx  specs
src/javascript/web_apis/3ds/: _typedefs.hpp  types.ixx
src/javascript/web_apis/accelerometer/: _typedefs.hpp  accelerometer.cpp  accelerometer.hpp  accelerometer_private.hpp  detail.cpp  detail.ixx  gravity_sensor.cpp  gravity_sensor.hpp  gravity_sensor_private.hpp  linear_accelerometer.cpp  linear_accelerometer.hpp  linear_accelerometer_private.hpp  types.ixx
src/javascript/web_apis/ambient_light/: _typedefs.hpp  ambient_light_sensor.cpp  ambient_light_sensor.hpp  ambient_light_sensor_private.hpp  detail.cpp  detail.ixx  types.ixx
src/javascript/web_apis/aria/: types.ixx
src/javascript/web_apis/autoplay/: _typdefs.hpp  _typedefs.hpp  types.ixx
src/javascript/web_apis/background_tasks/: _typedefs.hpp  idle_deadline.cpp  idle_deadline.hpp  idle_deadline_private.hpp  types.ixx
src/javascript/web_apis/badging/: _typedefs.hpp
src/javascript/web_apis/battery/: _typedefs.hpp  battery_manager.cpp  battery_manager.hpp  battery_manager_private.hpp
src/javascript/web_apis/bluetooth/: _typedefs.hpp  bluetooth.cpp  bluetooth.hpp
src/javascript/web_apis/clipboard/: _pimpl.hpp  _typedefs.hpp  clipboard.cpp  clipboard.hpp  clipboard_event.cpp  clipboard_event.hpp  clipboard_event.ixx  clipboard_event_private.cpp  clipboard_event_private.ixx  clipboard_item.cpp  clipboard_item.hpp  types.ixx
src/javascript/web_apis/console/: _typedefs.hpp  console.cpp  console.hpp  console_private.hpp  detail.cpp  detail.ixx  types.ixx
src/javascript/web_apis/contact_picker/: _typedefs.hpp  contact_address.cpp  contact_address.hpp  contact_address.ixx  contact_address_private.cpp  contact_address_private.hpp  contact_address_private.ixx  contacts_manager.cpp  contacts_manager.hpp  contacts_manager_private.hpp  detail.ixx  types.ixx
src/javascript/web_apis/content_security_policy/: _typedefs.hpp
src/javascript/web_apis/css/: _concepts.hpp  _namespace.cpp  _namespace.hpp  _typedefs.hpp  property.hpp
src/javascript/web_apis/device_orientation/: _typedefs.hpp  device_orientation_event.cpp  device_orientation_event.hpp  device_orientation_event_private.hpp  types.ixx
src/javascript/web_apis/device_posture/: _typedefs.hpp  detail.ixx  device_posture.cpp  device_posture.hpp  device_posture_private.hpp  types.ixx
src/javascript/web_apis/dom/: _detail.cpp  _detail.ixx  _typedefs.hpp  _types.ixx  detail.ixx  types.ixx
src/javascript/web_apis/dom_parsing/: _typedefs.hpp  detail.cpp  detail.ixx  dom_parser.cpp  dom_parser.hpp  types.ixx  xml_serializer.hpp
src/javascript/web_apis/edit_context/: _typedefs.hpp  edit_context.cpp  (+5 more)
(+3295 files in other folders)
